--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
          padding: 10px;
          border: 1px solid #aaa;
         }
+        h1{
+            text-align: center;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
-    <h1>Модуль 15</h1>>
+    <h1>Модуль 15</h1>
     <div id="app"></div>
     
 </body>
