--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Модуль 16</title>
     
 
-    <script src="script.js" defer></script>
+    <script src="./build/script.js" defer></script>
     <style>
         .checked{
             text-decoration: line-through;
