--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 										  </div>
 										  <div class="butn">
 											  <a  data-toggle="modal" data-target=".slide-2">Забронировать</a>
-											  <div class="modal fade slide-2" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+											  <div class="modal fade slide-2" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel-2" aria-hidden="true">
 													<div class="modal-dialog modal-xl modal-dialog-centered">
 													  <div class="modal-content">
 														<div class="row">
@@ -750,7 +750,7 @@
 											  </div>
 											  <div class="butn">
 												  <a  data-toggle="modal" data-target=".slide-3">Забронировать</a>
-												  <div class="modal fade slide-3" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+												  <div class="modal fade slide-3" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel-3" aria-hidden="true">
 														<div class="modal-dialog modal-xl modal-dialog-centered">
 														  <div class="modal-content">
 															<div class="row">
