--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
 					  </div>
 					  <div class="follow" style="color:#F7931D; margin-top: -10px; padding-left: 7px; font-size: 11px;">Следуй за мечтой</div>
 					</div>
+					<div class="title-text">
+						<div class="h2">Отель Ольхон</div>
+						<p class="title-p">максимум комфорта на ольхоне</p>
+					</div>
+					<div class="vstricha">
+							<div class="hamburger hamburger--elastic" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
+								<div class="hamburger-box">
+								 	<div class="hamburger-inner"></div>
+									</div>
+							</div>
+						<nav id="navigation">
+							<!--navigation goes here-->
+						</nav>
+						<p class="p-ct">+7(902) 170-03-03 </p>
+					</div>
 				  </div>
         <div class="container-my">
                 <div class='header-main'>
@@ -242,7 +257,10 @@
     <section id="number">
 		<div class="container-my">
 				<div class="row marg">
-					
+					<div class="header-numder-mob">
+							<h2 class="h2">Номер “Пляж”</h2>
+							<h4 class="h5">от 4400 рублей/сутки</h4>
+					</div>
 						<div class="col-xl-7 col-lg-7 col-sm-12">
 							  <div class="block-img">
 									  <img src="./img/standart_plaj.png" class="d-block w-100" alt="Страндарт “Пляж”" >
@@ -250,7 +268,7 @@
 						</div>
 						<div class="col-xl-5 col-lg-5 col-sm-12">
 							  <div class="block-info">
-									<div class="row">
+									<div class="row header-number">
 											<div class="col"><h2 class="h2">Страндарт “Пляж”</h2></div>
 											<div class="col-5"><h4 class="h5">от 4400 рублей/сутки</h4></div>
 											<hr class="hr"/>
@@ -443,6 +461,10 @@
 						</div>
 					</div>
 					<div class="row marg">
+							<div class="header-numder-mob">
+									<h2 class="h2">Страндарт “Ольхон”</h2>
+									<h4 class="h5">от 4900 рублей/сутки</h4>
+							</div>
 							<div class="col-xl-7 col-lg-7 col-sm-12">
 								  <div class="block-img">
 										  <img src="./img/standart_olhaon.png" class="d-block w-100" alt="Страндарт “Ольхон”">
@@ -450,7 +472,7 @@
 							</div>
 							<div class="col-xl-5 col-lg-5 col-sm-12">
 								  <div class="block-info">
-										<div class="row">
+										<div class="row header-number">
 												<div class="col"><h2 class="h2">Страндарт “Ольхон”</h2></div>
 												<div class="col-5"><h4 class="h5">от 4900 рублей/сутки</h4></div>
 												<hr class="hr"/>
@@ -641,6 +663,10 @@
 							</div>
 						</div>
 						<div class="row marg">
+								<div class="header-numder-mob">
+										<h2 class="h2">Полулюкс “Шаман”</h2>
+										<h4 class="h5">от 5500 рублей/сутки</h4>
+								</div>
 								<div class="col-xl-7 col-lg-7 col-sm-12">
 									  <div class="block-img">
 											  <img src="./img/standart_shaman.png" class="d-block w-100" alt="Полулюкс “Шаман”">
@@ -648,8 +674,8 @@
 								</div>
 								<div class="col-xl-5 col-lg-5 col-sm-12">
 									  <div class="block-info">
-											<div class="row">
-													<div class="col"><h2 class="h2"> Полулюкс “Шаман”</h2></div>
+											<div class="row header-number">
+													<div class="col"><h2 class="h2">Полулюкс “Шаман”</h2></div>
 													<div class="col-5"><h4 class="h5">от 5500 рублей/сутки</h4></div>
 													<hr class="hr"/>
 												</div>
@@ -860,6 +886,14 @@
 			<div class="row">
 				<div class="col">
 					<div class='header-block-left'>
+							<div class='header-block-left-img-mob'>
+									<svg width="119" height="120" viewBox="0 0 119 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M59.2137 0.814941C26.5113 0.814941 0 27.3263 0 60.0287C0 74.8009 5.42169 88.297 14.3674 98.6695C14.8425 98.4815 15.2545 98.2231 15.9249 98.2303C20.4939 97.0819 25.9443 96.8178 30.4114 95.5661C38.3811 100.887 47.9555 103.991 58.2577 103.991C79.1478 103.991 97.0551 91.2411 104.633 73.0984C104.778 73.0066 104.818 72.8113 104.838 72.5917C105.87 71.4434 107.977 71.3702 108.656 69.8658C111.81 68.5222 114.855 67.0724 118.139 65.8623C118.328 63.9417 118.429 61.9981 118.429 60.0287C118.429 27.3263 91.9176 0.814941 59.2137 0.814941Z" fill="#9DDAE5"/>
+										<path d="M89.2557 51.9436C78.9448 51.9436 69.6316 56.1811 62.9453 63.0037C63.0889 63.2908 63.2381 63.5722 63.3759 63.8664C63.498 64.2899 63.1405 66.3871 63.6702 66.3713C63.5697 68.4929 64.431 68.9996 63.2841 70.3604C63.2841 70.5413 65.0109 70.7753 65.0109 70.9576C65.931 72.4002 66.2741 74.4199 67.1942 75.8668C67.79 77.0869 68.0971 78.5985 68.8292 79.6837V80.2291C71.0585 83.5737 73.8432 87.3375 80.2855 85.1384C80.864 85.0178 81.3894 85.0652 81.922 85.1384C82.4086 85.2747 82.7 85.4527 83.0115 86.2307V86.7762C86.3101 86.6097 90.9983 83.1287 93.9223 80.7746C94.8539 80.799 95.3348 80.3684 95.5573 79.6837C98.889 77.9238 101.338 75.2797 104.286 73.1409C104.751 73.2399 104.799 72.927 104.83 72.5911C105.862 71.4427 107.97 71.3695 108.649 69.8652C111.791 68.5273 114.827 67.0833 118.097 65.8746C111.347 57.3897 100.94 51.9436 89.2557 51.9436Z" fill="#F7931D"/>
+										<path d="M67.7442 91.6851C68.027 87.4003 66.1207 85.3059 65.0154 82.4092C64.5302 82.1695 64.0407 81.9326 63.9259 81.3211C62.6369 79.333 60.877 77.8258 60.1076 75.3195C59.9799 75.3195 58.3664 72.0237 57.5181 70.083C54.2797 75.5679 52.415 81.957 52.415 88.7855C52.415 90.6114 52.5528 92.4057 52.8098 94.1598C53.2304 94.2531 53.6596 94.3392 54.106 94.4096C54.5137 95.6426 57.1678 94.6235 58.4712 94.9579H59.5607C60.7005 94.0765 68.9141 94.7211 68.2897 92.2277C68.3887 91.7669 68.0758 91.7167 67.7442 91.6851Z" fill="#F7931D"/>
+										<path d="M118.106 65.8767C114.836 67.0853 111.8 68.5294 108.658 69.8672C108.018 71.2883 106.109 71.4448 105.031 72.4252C105.041 72.0735 102.283 72.0807 101.324 74.0257C98.3745 76.1703 98.8984 77.9258 95.5668 79.6857C95.3443 80.3704 94.8634 80.801 93.9318 80.7766C91.0078 83.1308 86.3196 86.6117 83.0209 86.7782V86.2328C82.7094 85.4548 82.4181 85.2768 81.9314 85.1404C81.3989 85.0672 80.8735 85.0198 80.295 85.1404C73.8527 87.3395 70.9775 82.937 69.4976 80.234C69.4976 80.0532 68.8387 79.8694 68.8387 79.6857C68.1066 78.6005 67.7994 77.089 67.2037 75.8688C66.2836 74.4219 65.9405 72.4022 65.0204 70.9596V70.4141C65.1525 68.6629 64.8137 68.1418 64.5898 67.4069L69.4258 49.3805L69.5248 49.4149C69.7158 49.2341 69.8478 49.0762 69.9167 48.9455C70.3732 48.4546 70.7191 48.0168 70.956 47.6378C71.19 47.2603 71.322 46.8742 71.3464 46.4837L71.2517 45.1043L71.2115 44.3162C69.8249 43.1837 68.9923 42.4114 68.7109 42.0008L68.1081 41.4683L67.8425 41.3606L67.4836 41.2372L66.7185 40.4032L64.2998 38.2845L63.5964 37.8481L62.7208 37.3084L62.5514 37.0945L61.5179 36.1528L61.1863 35.6375L61.5021 34.9714L61.2653 34.3614L60.8303 34.0413L60.8605 33.559L60.3294 33.325L59.6202 32.9877L59.4566 32.6848L59.4824 32.2929C59.2284 31.8135 58.98 31.5221 58.7389 31.4072C58.4259 30.6249 57.8819 29.4765 57.2819 28.8076L57.2718 28.7775L57.2704 28.7918C57.1283 28.6368 56.9848 28.5047 56.8383 28.4129V26.775C56.656 24.9578 55.8364 24.6463 56.3259 22.1572C55.6182 21.9663 54.9091 20.9356 54.1397 20.7849L54.111 20.7548V20.6715C54.0823 20.6715 54.055 20.6686 54.0263 20.6686L53.5182 20.1433L53.6516 19.8088L54.4024 19.9523L54.6766 19.7916L55.1904 19.7844C55.7015 19.605 55.8709 19.1212 55.7029 18.3332L55.9153 17.8767L55.7531 17.6039L56.3575 17.0599L56.2742 16.6666L56.7422 16.4613C56.8627 16.3738 57.0235 16.1642 57.2302 15.847L56.7651 15.1206L56.3991 14.3756C56.4077 14.1014 56.5369 13.8976 56.7867 13.7742L57.1943 13.2761L56.9345 13.0234L58.4403 13.3234L59.8226 13.5373L60.1987 13.3593C58.7776 12.4981 57.6637 11.9454 56.857 11.7071L56.3847 10.4655L56.0761 9.50657L55.4704 7.15962C54.7024 6.78066 53.6086 6.63711 52.1875 6.73042C50.9358 6.65864 49.9482 6.69309 49.2276 6.84812C48.1768 7.07349 47.65 7.50125 47.6443 8.11706C47.5094 8.76301 47.3988 9.37164 47.3141 9.94439C47.2309 10.5056 47.1663 10.8602 47.1333 11.0081L44.904 11.1789C43.7226 11.4315 43.1944 11.8535 43.3193 12.4406C43.5274 13.0895 44.7964 13.3981 47.1261 13.3794L47.8223 15.1866C47.8438 15.9374 47.8036 16.4728 47.706 16.8087C47.6041 17.1389 47.4763 17.4202 47.3213 17.6628C47.007 17.792 46.9237 18.1968 47.0629 18.8499C45.8155 19.1169 45.0547 19.6566 44.7849 20.472C44.7318 20.6313 44.6686 20.7749 44.604 20.9112C44.3428 21.0734 44.1518 21.3031 43.747 21.3203V20.7749C42.8872 19.2734 41.9958 17.1288 40.579 16.1828C37.1799 15.6546 33.4391 15.4364 32.9209 19.2705C31.8917 21.9735 29.9624 23.6458 28.4739 27.8674V30.5948C27.7332 30.7627 28.0217 31.9599 27.9284 32.7766V37.6844C25.7063 40.3544 27.7045 41.3951 26.8375 44.2315C27.2609 44.7167 27.4231 45.4617 27.3844 46.4134C27.6987 48.1833 27.0111 48.9498 26.8375 50.2317V50.7757C26.8375 51.1389 26.869 53.5605 26.869 53.9251C29.3595 54.594 26.7872 48.179 28.4739 48.0498C29.3064 49.402 29.5935 51.2925 31.2027 51.8681C31.3448 52.6346 32.3984 52.4897 32.8376 52.9576H35.0209C37.3823 53.1371 38.634 52.2083 39.3833 50.7757C39.9144 50.7915 39.6 51.1317 39.722 51.5552C39.6345 52.1897 40.0996 53.7931 40.1369 54.4677C40.2632 55.7812 42.0776 57.9099 42.6575 58.4138C41.2135 60.9746 42.9676 65.7446 41.0211 68.7763C40.1283 70.1687 39.0373 72.5716 38.456 74.8669C38.1 78.9737 36.5397 82.0484 36.6703 87.5304C37.1526 87.4615 37.8301 87.0352 37.7454 87.3237C38.0325 89.741 35.3167 91.7994 36.6574 94.9603H34.4755C34.2401 96.179 26.6135 94.755 25.4824 95.0823C20.9751 96.39 20.5789 97.0632 15.9266 98.2317C15.2562 98.2245 14.8443 98.4829 14.3691 98.6709C25.2283 111.261 41.2852 119.244 59.2154 119.244C62.0907 119.244 64.9171 119.039 67.6832 118.644C94.4629 114.811 115.458 93.0526 118.135 65.9126C118.136 65.8968 118.141 65.881 118.141 65.8637C118.131 65.8666 118.118 65.8724 118.106 65.8767ZM53.5655 33.8661C55.5952 33.6566 54.5761 36.493 56.2929 36.5949C56.9489 37.3399 57.5819 38.1093 58.2436 38.85L58.6183 38.4323L59.1796 38.5586L59.7667 39.3826L60.6897 40.6099L61.7304 41.4625C62.0275 41.6147 62.4983 41.8114 63.1515 42.0453L65.6391 43.0875L65.8917 43.3961L66.3338 43.6172L66.5994 43.7349L66.908 44.6406L67.9415 45.5837L69.0282 46.722L68.4884 48.7302L68.4698 48.7632L68.477 48.7747L64.0673 65.2006C63.7845 64.7096 63.4672 64.157 63.3854 63.8685C63.2476 63.5742 63.0983 63.2929 62.9548 63.0058C62.5486 62.2048 62.1323 61.4153 61.7476 60.5942C57.9637 56.2161 54.7971 51.4619 53.6847 49.7594C53.511 48.4776 53.6172 49.6676 53.5655 48.0498C53.2354 43.1636 53.5325 44.7626 53.6847 40.6515C53.6847 40.4692 53.5655 38.9577 53.5655 38.7768C53.3071 36.8217 52.6784 35.6231 53.5655 33.8661ZM54.6708 94.9086C54.223 94.8383 54.5962 92.8918 54.177 92.8C45.8184 90.9525 41.4302 86.3605 45.3835 78.0521V77.5052C45.5672 77.5052 46.2347 76.1789 46.417 76.1789C46.9854 73.7343 47.0141 71.5209 47.5653 70.4141C48.9319 68.327 49.9597 65.8982 51.3836 63.8685C53.4148 65.0384 54.767 66.491 57.0293 68.7031C56.9388 68.6758 57.1628 69.2615 57.5231 70.0854C58.3714 72.0261 59.9848 75.3219 60.1126 75.3219C60.3164 75.9865 60.5174 76.7904 60.7284 77.6488L56.0948 94.9172C55.5665 94.9244 55.0713 94.933 54.6708 94.9086ZM59.5657 94.9603H58.4762C58.0743 94.9172 57.6436 94.9029 57.2116 94.9L61.2638 79.7991C61.7189 81.5518 62.2399 83.2614 62.9103 84.2935C63.5218 84.1672 64.4103 82.8236 64.897 83.0633C65.7252 85.2366 67.4061 88.4879 66.3123 89.8386C66.5047 90.4817 66.9841 91.6817 67.3214 91.8353C67.3659 92.1942 67.6803 92.0593 67.6573 92.4641C66.5822 93.3713 60.7054 94.0789 59.5657 94.9603Z" fill="#231F20"/>
+										</svg>										
+								  </div>
 							<div class='header-block-left-img'>
 							  <svg width="192" height="192" viewBox="0 0 192 192" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<g filter="url(#filter0_dd)">
@@ -907,6 +941,7 @@
 						  </div>
 						  <div class="kafe-block-text">
 								<h2 class="h2">Кафе</h2>
+								<h2 class="h2_mob">Отель Ольхон</h2>
 								<p>Кафе - это удивительное место, где ценят постоянных гостей<br> и учитывают их привычки и пожелания.</p>
 								<p>В то же время всегда найдется, чем удивить нового человека.</p>
 								<p>Меню кафе регулярно обновляется, основу составляют блюда русской и бурятской кухни.</p>
@@ -968,9 +1003,9 @@
 							<div class="carousel-inner">
 							  <div class="carousel-item active">
 								<div class="row">
-									<div class="col">
+									<div class="col-xl-8 col-lg-6 col-sm-12">
 										<div class="row">
-											<div class="col">
+											<div class="col-xl-6 col-lg-12 col-sm-12">
 												<div class="tur-block">
 													<div class="tur-block-img">
 														<img src="./img/image.png" alt="">
@@ -981,7 +1016,7 @@
 													</div>
 												</div>
 											</div>
-											<div class="col">
+											<div class="col-xl-6 col-lg-12 col-sm-12">
 													<div class="tur-block">
 															<div class="tur-block-img">
 																<img src="./img/ostrov.png" alt="Высадка на остров Огой">
@@ -993,8 +1028,8 @@
 														</div>
 											</div>
 										</div>
-										<div class="row">
-												<div class="col">
+										<div class="row tur-mob">
+												<div class="col-xl-6 col-lg-12">
 													<div class="tur-block">
 														<div class="tur-block-img">
 															<img src="./img/imageushani.png" alt="Ушаньи острова">
@@ -1005,7 +1040,7 @@
 														</div>
 													</div>
 												</div>
-												<div class="col">
+												<div class="col-xl-6 col-lg-12">
 														<div class="tur-block">
 																<div class="tur-block-img">
 																	<img src="./img/imagesamanka.png" alt="">
@@ -1018,7 +1053,7 @@
 												</div>
 											</div>
 									</div>
-									<div class="col-4">
+									<div class="col-xl-4 col-lg-4 col-sm-12">
 										<form class="zakazat-tur" action="">
 											<div class="block-svg-tur">
 													<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1465,7 +1500,7 @@
 				</div>
 				<div class="col">
 					<div class="block-map">
-							<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae41e13984e9f932f1dc51648d54c9072333e45c02cd6265872006e4fc380a52e&amp;width=635&amp;height=320&amp;lang=ru_RU&amp;scroll=true"></script>
+							<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae41e13984e9f932f1dc51648d54c9072333e45c02cd6265872006e4fc380a52e&amp;width=316&amp;height=320&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>
 				</div>
 			</div>
@@ -1525,5 +1560,15 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>
+	document.querySelectorAll('[data-target]').forEach(function(elem){
+		elem.addEventListener('click', function(){
+			document.querySelector(event.target.getAttribute('data-target')).querySelectorAll('img').forEach(function(el){
+				el.click();
+			})
+		});
+	});
+</script>
+
 </body>
 </html>
