--- a/index.html
+++ b/index.html
@@ -1483,7 +1483,7 @@
 		</div>	
 	</section>
 	<section id="ct">
-		<div class="container">
+		<div class="container-my">
 			<div class="row">
 				<div class="col-5">
 					<div class="ct-block">
