--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </header>
 	<section id="home">
 			
-        <div class="container-my">
+        <div class="container-my container-my-mob">
 				<div class='header-mob'>
 						<img class="header-img" src="./img/ekaterina-sazonova-y-xeaX21GfA-unsplash.png" alt="фон"/>
 						<div class='header-block-left'>
