--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
 							<h2 class="h2">Номер “Пляж”</h2>
 							<h4 class="h5">от 4400 рублей/сутки</h4>
 					</div>
-						<div class="col-xl-7 col-lg-7 col-sm-12">
+						<div class="col-xl-7 col-lg-7 col-xs-12">
 							  <div class="block-img">
 									  <img src="./img/standart_plaj.png" class="d-block w-100" alt="Страндарт “Пляж”" >
 								</div>
 						</div>
-						<div class="col-xl-5 col-lg-5 col-sm-12">
+						<div class="col-xl-5 col-lg-5 col-xs-12">
 							  <div class="block-info">
 									<div class="row header-number">
 											<div class="col"><h2 class="h2">Страндарт “Пляж”</h2></div>
@@ -466,12 +466,12 @@
 									<h2 class="h2">Страндарт “Ольхон”</h2>
 									<h4 class="h5">от 4900 рублей/сутки</h4>
 							</div>
-							<div class="col-xl-7 col-lg-7 col-sm-12">
+							<div class="col-xl-7 col-lg-7 col-xs-12">
 								  <div class="block-img">
 										  <img src="./img/standart_olhaon.png" class="d-block w-100" alt="Страндарт “Ольхон”">
 									</div>
 							</div>
-							<div class="col-xl-5 col-lg-5 col-sm-12">
+							<div class="col-xl-5 col-lg-5 col-xs-12">
 								  <div class="block-info">
 										<div class="row header-number">
 												<div class="col"><h2 class="h2">Страндарт “Ольхон”</h2></div>
@@ -668,12 +668,12 @@
 										<h2 class="h2">Полулюкс “Шаман”</h2>
 										<h4 class="h5">от 5500 рублей/сутки</h4>
 								</div>
-								<div class="col-xl-7 col-lg-7 col-sm-12">
+								<div class="col-xl-7 col-lg-7 col-xs-12">
 									  <div class="block-img">
 											  <img src="./img/standart_shaman.png" class="d-block w-100" alt="Полулюкс “Шаман”">
 										</div>
 								</div>
-								<div class="col-xl-5 col-lg-5 col-sm-12">
+								<div class="col-xl-5 col-lg-5 col-xs-12">
 									  <div class="block-info">
 											<div class="row header-number">
 													<div class="col"><h2 class="h2">Полулюкс “Шаман”</h2></div>
@@ -979,9 +979,14 @@
 	<section id="video">
 		<div class="container-my">
 			<div class="row">
-				<div class="col">
-					<img src="./img/Баннер приключения.png" alt="">
-				</div>
+					<video controls width="100%" height="547px">
+							<source src="video.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
+							<source src="video/2019-07-15 16.02.53_53.ogv" type="video/webm"><!-- WebM/VP8 для Firefox4, Opera, и Chrome -->
+							<source src="video.ogv" type="video/ogg"><!-- Ogg/Vorbis для старых версий браузеров Firefox и Opera -->
+							<object data="video.swf" type="application/x-shockwave-flash"><!-- добавляем видеоконтент для устаревших браузеров, в которых нет поддержки элемента video -->
+							  <param name="movie" value="video.swf">
+							</object>
+						  </video>
 			</div>
 		</div>
 	</section>
@@ -1004,9 +1009,9 @@
 							<div class="carousel-inner">
 							  <div class="carousel-item active">
 								<div class="row">
-									<div class="col-xl-8 col-lg-6 col-sm-12">
+									<div class="col-xl-8 col-lg-6 col-xs-12">
 										<div class="row">
-											<div class="col-xl-6 col-lg-12 col-sm-12">
+											<div class="col-xl-6 col-lg-12 col-xs-12">
 												<div class="tur-block">
 													<div class="tur-block-img">
 														<img src="./img/image.png" alt="">
@@ -1017,7 +1022,7 @@
 													</div>
 												</div>
 											</div>
-											<div class="col-xl-6 col-lg-12 col-sm-12">
+											<div class="col-xl-6 col-lg-12 col-xs-12">
 													<div class="tur-block">
 															<div class="tur-block-img">
 																<img src="./img/ostrov.png" alt="Высадка на остров Огой">
@@ -1054,7 +1059,7 @@
 												</div>
 											</div>
 									</div>
-									<div class="col-xl-4 col-lg-4 col-sm-12">
+									<div class="col-xl-4 col-lg-4 col-xs-12">
 										<form class="zakazat-tur" action="">
 											<div class="block-svg-tur">
 													<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1407,7 +1412,7 @@
 												
 
 
-									<div class="col-lg-4 col-sm-12 order" >
+									<div class="col-lg-4 col-xs-12 order" >
 											<form class="otziv" action="">
 													<div class="block-svg-otziv">
 															<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1511,7 +1516,7 @@
 	<section id="ct">
 		<div class="container-my">
 			<div class="row">
-				<div class="col-lg-5 col-sm-12">
+				<div class="col-lg-5 col-xs-12">
 					<div class="ct-block">
 						<h2 class="h2">отель Ольхон</h2>
 						<div class="ct-number">
@@ -1525,7 +1530,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-6 col-sm-12">
+				<div class="col-lg-6 col-xs-12">
 					<div class="block-map">
 							<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae41e13984e9f932f1dc51648d54c9072333e45c02cd6265872006e4fc380a52e&amp;width=316&amp;height=320&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>
