--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
 														<div class="col-lg-5 col-xs-12">
 															<div class="slider-modal">
 																<div class="slick">
-																	<div class="slide"><img src="./img/standart_plaj.png" alt="standart_plaj" width="460px" height="324px"></div>
-																	<div class="slide"><img src="./img/plaj/20170728_153850.jpg" alt="standart_plaj" width="460px" height="324px"></div>
-																	<div class="slide"><img src="./img/plaj/20170728_153945.jpg" alt="standart_plaj" width="460px" height="324px"></div>
+																	<div class="slide"><img src="./img/standart_plaj.png" alt="standart_plaj" width="350px" height="324px"></div>
+																	<div class="slide"><img src="./img/plaj/20170728_153850.jpg" alt="standart_plaj" width="350px" height="324px"></div>
+																	<div class="slide"><img src="./img/plaj/20170728_153945.jpg" alt="standart_plaj" width="350px" height="324px"></div>
 																</div>
 																<div class="slick-2">
 																		<div class="slide"><img src="./img/plaj/20170728_153945.jpg" alt="standart_plaj" width="220px" height="120px"></div>
@@ -960,7 +960,7 @@
 		<div class="container-my">
 			<div class="row">
 					<video controls width="100%" height="547px">
-							<source src="video/.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
+							<source src="video/Ролик заставка.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
 							<source src="video" type="video/webm"><!-- WebM/VP8 для Firefox4, Opera, и Chrome -->
 							<source src="video.ogv" type="video/ogg"><!-- Ogg/Vorbis для старых версий браузеров Firefox и Opera -->
 							<object data="video.swf" type="application/x-shockwave-flash"><!-- добавляем видеоконтент для устаревших браузеров, в которых нет поддержки элемента video -->
@@ -976,7 +976,7 @@
 		<div class="container-my">
 			<div class="row">
 					<video controls width="100%" height="547px">
-							<source src="video/Ролик заставка.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
+							<source src="video.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
 							<source src="video/2019-07-15 16.02.53_53.ogv" type="video/webm"><!-- WebM/VP8 для Firefox4, Opera, и Chrome -->
 							<source src="video.ogv" type="video/ogg"><!-- Ogg/Vorbis для старых версий браузеров Firefox и Opera -->
 							<object data="video.swf" type="application/x-shockwave-flash"><!-- добавляем видеоконтент для устаревших браузеров, в которых нет поддержки элемента video -->
