--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 								<rect y="16" width="30" height="4" rx="2" fill="#363636"/>
 								</svg>
 					</div>
+
 		   </div>
 				<div class='header-mob'>
 						<img class="header-img" src="./img/ekaterina-sazonova-y-xeaX21GfA-unsplash.png" alt="фон"/>
@@ -148,7 +149,7 @@
 							<p class="title-p">максимум комфорта на ольхоне</p>
 						</div>
 						<div class="vstricha">
-								<div class="hamburger">
+								<div class="hamburger-1">
 										<svg width="30" height="20" viewBox="0 0 30 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<rect width="30" height="4" rx="2" fill="#363636"/>
 											<rect y="8" width="30" height="4" rx="2" fill="#363636"/>
@@ -158,10 +159,17 @@
 								<p class="p-ct">+7(902) 170-03-03 </p>
 						</div>
 						<nav id="navigation">
-								<form class="myForm-mob">
+								<form class="myForm">
+										<div class="cross-1">
+												<svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<line x1="0.353553" y1="0.646447" x2="18.0312" y2="18.3241" stroke="black"/>
+													<line x1="18.3536" y1="1.35355" x2="0.675884" y2="19.0312" stroke="black"/>
+												</svg>
+													
+										</div>
 										<div class="form-group">
-										  <label for="exampleFormControlSelect1">Где вас встретить?</label>
-										  <select class="form-control" id="exampleFormControlSelect1">
+										  <label for="exampleFormControlSelect-mob">Где вас встретить?</label>
+										  <select class="form-control" id="exampleFormControlSelect-mob">
 											<option>Я доберусь сам</option>
 											<option>Паром Ольхонские Ворота</option>
 											<option>ЖД Вокзал Иркутск</option>
@@ -169,8 +177,8 @@
 										  </select>
 										</div>
 										<div class="form-group">
-											<label for="exampleFormControlSelect2">Число гостей</label>
-											<select class="form-control" id="exampleFormControlSelect2" >
+											<label for="exampleFormControlSelect2-mob">Число гостей</label>
+											<select class="form-control" id="exampleFormControlSelect2-mob" >
 												<option>1 человек</option>
 												<option>2 человекa</option>
 												<option>Группа до 6 человек</option>
@@ -178,8 +186,8 @@
 											</select>
 										</div>
 										<div class="form-group">
-											<label for="exampleFormControlText">Вас зовут</label>
-											<input type="text" class="form-control" id="exampleFormControlText" placeholder="Ваше имя" required>
+											<label for="exampleFormControlText-mob">Вас зовут</label>
+											<input type="text" class="form-control" id="exampleFormControlText-mob" placeholder="Ваше имя" required>
 										</div>
 										<div class="form-group">
 											<div class="block-date">
