--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 							<div class="row">
 								<div class="col-md-6 col-sm-12">
 
-									<iframe width="555px" height="320px"
+									<iframe width="100%" height="320px"
 										src="http://www.youtube-nocookie.com/embed/7cjVj1ZyzyE" frameborder="0"
 										allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								</div>
