--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
 		<div class="container">
 			<div class="row">
 				<div id="testimonial-c" class="carousel slide" data-ride="carousel">
-					<ol class="carousel-indicators">
+					<ol class="carousel-indicators-my">
 						<li data-target="#testimonial-c" data-slide-to="0" class="active"></li>
 						<li data-target="#testimonial-c" data-slide-to="1"></li>
 					</ol>
