--- a/index.html
+++ b/index.html
@@ -652,9 +652,9 @@
 			<div class="gallery">
 					<ul class=" nav filters">
 							<li class="nav-item  active"><a class="nav-link" href="!#" data-images-toggle="all">ALL</a></li>
-							<li class="nav-item "><a class="nav-link" href="!#" data-images-toggle="Web_Design">Web Design</a></li>
-							<li class="nav-item "><a class="nav-link" href="!#" data-images-toggle="Web_Development">Web Development</a></li>
-							<li class="nav-item "><a class="nav-link" href="!#" data-images-toggle="Uncategorized">Uncategorized</a></li>
+							<li class="nav-item "><a class="nav-link" href="#" data-images-toggle="Web_Design">Web Design</a></li>
+							<li class="nav-item "><a class="nav-link" href="#" data-images-toggle="Web_Development">Web Development</a></li>
+							<li class="nav-item "><a class="nav-link" href="#" data-images-toggle="Uncategorized">Uncategorized</a></li>
 					</ul>
 	
 					<div class="gallery-items-row row no-gutters"></a>
