--- a/index.html
+++ b/index.html
@@ -1488,7 +1488,7 @@
 		</div>
 	</section>
 	<section id="our">
-		<div class="comtainer">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-sm-12">
 					<div class="block-our">
