--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap-4.0.0.css">
     <link rel="stylesheet" href="./css/styles.min.css">
-    <script
-  src="http://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+    <script src="./js/jquery-3.4.1.min.js"></script>
     <script>
         jQuery(document).ready(function ($) {
             $('.counter').counterUp({
@@ -1659,7 +1656,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="./js/waypoints.js"></script>
     <script src="./js/jquery.counterup.min.js"></script>
     <script src="./js/scripts.min.js"></script>
 
