--- a/index.html
+++ b/index.html
@@ -1656,9 +1656,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="./js/waypoints.js"></script>
-    <script src="./js/jquery.counterup.min.js"></script>
-    <script src="./js/scripts.min.js"></script>
+    <script src="js/waypoint.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/scripts.min.js"></script>
 
 </body>
 
